# mlify

./: README.md  environment.yaml  pyproject.toml
.github/workflows/: codeql-analysis.yml  stale.yml
mlify/: __main__.py  env.py
mlify/ui/gui/: main.py
mlify/utils/detectors/: classify.py
